01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp-v1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
